# DataMining2

./: README.md  c.md  module0_physical.ipynb  note.txt  plan.md  preprocessing.ipynb  pyproject.toml  tab.ipynb  various.ipynb
CMI/base_data/: column_bounds.md  fondamentali.txt
CMI/eif_data/: cmi_eif_scores.csv  cmi_no_outliers.csv  loda.csv  lof.csv  res.ipynb
CMI/outlier_data/: abod.csv  cmi_consensus_clean.csv  eif.csv  loda.csv  lof.csv
CMI/processed_data/: cmi_consensus_clean.csv  cmi_imputed.csv  cmi_preprocessed.csv
CMI/src/: ABOD.ipynb  EIF.ipynb  LODA.ipynb  LOF.ipynb  module_0.ipynb  module_1.ipynb  module_1_v2.ipynb
CMI/src/module_1/: ABOD.ipynb  EIF.ipynb  LODA.ipynb  LOF.ipynb  module_1.ipynb  module_1_v2.ipynb
data/: cmi_clean_pre_imputation.csv  cmi_imputed.csv
