[project]
name = "datamining2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "claude>=0.4.11",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "miceforest>=6.0.5",
    "nbconvert>=7.17.0",
    "pyod>=3.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
